--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": ">=5.6.4",
-        "laravel/passport": "^2.0"
+        "laravel/passport": "^2.0|^3.0"
     },
     "require-dev": {
       "phpunit/phpunit": "~5.0"
